syntax = "proto3";
package model;

option java_multiple_files = true;
option java_package = "com.syscho.grpc.stub";


message  LoginRequest{
  string  userName = 1;
  string  password = 2;
  map<string, string>  headers = 3;
}
message  LoginResponse{
  string  userName = 1;
  Status  status = 2;
}

enum Status{
  FAILURE = 0;
  SUCCESS = 1;
}

service  LoginService{
  rpc login(LoginRequest) returns (LoginResponse);
}